fixed contact me section

--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
             </details>
             <section>
                 <h2 id="contact">Contact Me</h2>
-                <a href="mailto:kasimpasaoglu@windowslive.com"><button>Mail Me</button></a>
-                <a aria-label="Chat on WhatsApp" href="https://wa.me/905433010531"><img alt="Chat on WhatsApp" src="./img/whatsapp.png" />
-                </a>
-                <section>
+                <a href="mailto:kasimpasaoglu@windowslive.com"><button>Mail Me</button></a><br>
+                <a aria-label="Chat on WhatsApp" href="https://wa.me/905433010531" target="_blank"><img alt="Chat on WhatsApp" src="https://scontent.whatsapp.net/v/t39.8562-34/420096885_277459331727648_6533635286062607832_n.png?ccb=1-7&_nc_sid=73b08c&_nc_ohc=4cnD1QsI5MIQ7kNvgGldbr-&_nc_ht=scontent.whatsapp.net&oh=01_Q5AaIPdvLwTy1Y-Jk57HeOgNKw9Mk-oztuX3bOw79l0QN7eZ&oe=663C11A5" width="200"/>
+                </a><hr>
+
                     <form action="mailto:kasimpasaoglu@windowslive.com" method="post" enctype="text/plain">
                         <label for="name">Name:</label><br>
                         <input type="text" name="name" id="name"><br>
@@ -97,7 +97,7 @@
                         <textarea name="message" id="message" rows="4" cols="50"></textarea><br>
                         <input type="submit" value="Submit">
                     </form>
-                </section>
+
             </section>
     </main>
 
