--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section>
             <h2>About Me</h2>
             <aside>
-                <img src="./img/profilepic.jpeg" alt="profilepic">
+                <img src="./img/profile.jpeg" alt="profilepic">
             </aside>
             <p>Hi there! I'm <b>Kasim Pasaoglu,</b> hailing from <b>Turkey.</b> Recently, I've delved into the exciting
                 world of front-end development, and I couldn't be more thrilled about it. Since May 1, 2024, I've been
