added footer and minor fixes

--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
             <aside>
                 <img src="./img/profile.jpeg" alt="profilepic">
             </aside>
-            <p>Hi there! I'm <b>Kasim Pasaoglu,</b> hailing from <b>Turkey.</b> Recently, I've delved into the exciting
+            <p>Hi there! I'm <a href="https://github.com/kasimpasaoglu">Kasim Pasaoglu</a> hailing from <b>Turkey.</b>
+                Recently, I've delved into the exciting
                 world of front-end development, and I couldn't be more thrilled about it. Since May 1, 2024, I've been
-                immersing myself in courses on Udemy, with the invaluable guidance of <b>@hakanyalcinkaya.</b> It's an
+                immersing myself in courses on Udemy, with the invaluable guidance of <a
+                    href="https://github.com/hakanyalcinkaya" target="_blank">Hakan Yalcinkaya</a> It's an
                 exhilarating journey, and I'm currently working on my very first project to showcase on GitHub Pages.
                 Stay tuned for updates on my coding endeavors!</p>
         </section>
@@ -122,6 +124,10 @@
         </section>
         <a class="button" href="#home">Go Top</a>
     </main>
+    <footer>
+        <p>This page created by <a href="https://github.com/kasimpasaoglu" target="_blank">Kasim Pasaoglu</a>. Used <a
+                href="https://simplecss.org/" target="_blank">SimpleCSS</a> CDN</p>
+    </footer>
 
 </body>
 
