--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <aside>
                 <img src="./img/profile.jpeg" alt="profilepic">
             </aside>
-            <p>Hi there! I'm <a href="https://github.com/kasimpasaoglu">Kasim Pasaoglu</a> hailing from <b>Turkey.</b>
+            <p>Hi there! I'm <a href="https://github.com/kasimpasaoglu" target="_blank">Kasim Pasaoglu</a> hailing from <b>Turkey.</b>
                 Recently, I've delved into the exciting
                 world of front-end development, and I couldn't be more thrilled about it. Since May 1, 2024, I've been
                 immersing myself in courses on Udemy, with the invaluable guidance of <a
