--- a/index.html
+++ b/index.html
@@ -20,14 +20,93 @@
     <div class="navbar">
         <nav>
             <ul>
-                <li><a class="nav-btn" href="">About Me</a></li>
-                <li><a class="nav-btn" href="">Learning Roadmap</a></li>
+                <li><a class="nav-btn" href="#title">About Me</a></li>
+                <li><a class="nav-btn" href="#roadmap">Learning Roadmap</a></li>
                 <li><a class="nav-btn" href="">Contact Me</a></li>
                 <li><a class="nav-btn" href="#home">Go Top</a></li>
             </ul>
         </nav>
     </div>
     <main>
+        <article class="container">
+            <h2 id="title" class="title">About Me</h2>
+            <div class="content">
+                <p>Hi there! I'm <a class="link" href="https://github.com/kasimpasaoglu" target="_blank">Kasim
+                        Pasaoglu</a> hailing from Turkey. Recently, I've delved into the exciting world of front-end
+                    development, and I couldn't be more thrilled about it. Since May 1, 2024, I've been immersing myself
+                    in courses on Udemy, with the invaluable guidance of <a class="link"
+                        href="https://github.com/hakanyalcinkaya" target="_blank">Hakan Yalcinkaya</a>. I also receive
+                    tremendous support from my friend <a class="link" href="https://github.com/umitalp">Umit Alp
+                        Acarlar</a>, a Senior Software Engineer.<br><br>It's an
+                    exhilarating journey, and I'm currently working on my very first project to showcase on GitHub
+                    Pages. Stay tuned for updates on my coding endeavors!</p>
+                <aside>
+                    <img src="./img/profile.jpeg" alt="profile picture">
+                </aside>
+            </div>
+        </article>
+        <section class="container">
+            <h2 id="roadmap" class="title">Learning Roadmap</h2>
+            <details>
+                <summary>ROADMAP</summary>
+                <img src="./img/roadmap.png" alt="roadmap">
+            </details>
+            <details>
+                <summary>LIST OF ACCOMPLISHMENTS TO DATE</summary>
+                <ol class="lad">
+                    <li>Installation</li>
+                    <li>Note-taking methods, markdown, chrome usage, and productivity</li>
+                    <li>HTML 
+                      <ul class="drop-down">
+                        <li>Headings, paragraphs</li>
+                        <li>Building HTML structure</li>
+                        <li>Emmet shortcuts</li>
+                        <li>Images, links</li>
+                        <li>Tables</li>
+                        <li>Other HTML tags</li>
+                      </ul>
+                    </li>
+                    <li>Effective usage of VS Code
+                      <ul class="drop-down">
+                        <li>Settings</li>
+                        <li>Shortcuts</li>
+                        <li>Code Snippets</li>
+                      </ul>
+                    </li>
+                    <li>GIT, VCS, and GitHub
+                      <ul class="drop-down">
+                        <li>What is VCS</li>
+                        <li>Terminal commands</li>
+                        <li>Working with multiple branches</li>
+                        <li>Transferring projects to GitHub or importing projects from GitHub</li>
+                      </ul>
+                    </li>
+                    <li>CSS
+                      <ul class="drop-down">
+                        <li>What is CSS</li>
+                        <li>CSS Definitions</li>
+                        <li>CSS Writing Rules</li>
+                        <li>CSS Selectors</li>
+                        <li>Understanding Block, Inline, and Inline Block Structures</li>
+                        <li>Box Properties: Margin, Padding, Border, Width</li>
+                        <li>Visibility</li>
+                        <li>Hover</li>
+                        <li>CSS Reset and Normalize</li>
+                        <li>Usage of Background Image</li>
+                        <li>Color Definitions</li>
+                        <li>Text Properties</li>
+                        <li>Font Size / Font Family</li>
+                        <li>Float</li>
+                        <li>:root Definitions</li>
+                        <li>CSS Positions</li>
+                        <li>Working with Media Queries</li>
+                        <li>FlexBox and flex commands</li>
+                      </ul>
+                    </li>
+                    <li>SASS & SCSS (Learning)</li>
+                  </ol>
+            </details>
+        </section>
     </main>
     <footer>
 
