finished css work

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <ul>
                 <li><a class="nav-btn" href="#title">About Me</a></li>
                 <li><a class="nav-btn" href="#roadmap">Learning Roadmap</a></li>
-                <li><a class="nav-btn" href="">Contact Me</a></li>
+                <li><a class="nav-btn" href="#contact">Contact Me</a></li>
                 <li><a class="nav-btn" href="#home">Go Top</a></li>
             </ul>
         </nav>
@@ -56,60 +56,90 @@
                 <ol class="lad">
                     <li>Installation</li>
                     <li>Note-taking methods, markdown, chrome usage, and productivity</li>
-                    <li>HTML 
-                      <ul class="drop-down">
-                        <li>Headings, paragraphs</li>
-                        <li>Building HTML structure</li>
-                        <li>Emmet shortcuts</li>
-                        <li>Images, links</li>
-                        <li>Tables</li>
-                        <li>Other HTML tags</li>
-                      </ul>
+                    <li>HTML
+                        <ul class="drop-down">
+                            <li>Headings, paragraphs</li>
+                            <li>Building HTML structure</li>
+                            <li>Emmet shortcuts</li>
+                            <li>Images, links</li>
+                            <li>Tables</li>
+                            <li>Other HTML tags</li>
+                        </ul>
                     </li>
                     <li>Effective usage of VS Code
-                      <ul class="drop-down">
-                        <li>Settings</li>
-                        <li>Shortcuts</li>
-                        <li>Code Snippets</li>
-                      </ul>
+                        <ul class="drop-down">
+                            <li>Settings</li>
+                            <li>Shortcuts</li>
+                            <li>Code Snippets</li>
+                        </ul>
                     </li>
                     <li>GIT, VCS, and GitHub
-                      <ul class="drop-down">
-                        <li>What is VCS</li>
-                        <li>Terminal commands</li>
-                        <li>Working with multiple branches</li>
-                        <li>Transferring projects to GitHub or importing projects from GitHub</li>
-                      </ul>
+                        <ul class="drop-down">
+                            <li>What is VCS</li>
+                            <li>Terminal commands</li>
+                            <li>Working with multiple branches</li>
+                            <li>Transferring projects to GitHub or importing projects from GitHub</li>
+                        </ul>
                     </li>
                     <li>CSS
-                      <ul class="drop-down">
-                        <li>What is CSS</li>
-                        <li>CSS Definitions</li>
-                        <li>CSS Writing Rules</li>
-                        <li>CSS Selectors</li>
-                        <li>Understanding Block, Inline, and Inline Block Structures</li>
-                        <li>Box Properties: Margin, Padding, Border, Width</li>
-                        <li>Visibility</li>
-                        <li>Hover</li>
-                        <li>CSS Reset and Normalize</li>
-                        <li>Usage of Background Image</li>
-                        <li>Color Definitions</li>
-                        <li>Text Properties</li>
-                        <li>Font Size / Font Family</li>
-                        <li>Float</li>
-                        <li>:root Definitions</li>
-                        <li>CSS Positions</li>
-                        <li>Working with Media Queries</li>
-                        <li>FlexBox and flex commands</li>
-                      </ul>
+                        <ul class="drop-down">
+                            <li>What is CSS</li>
+                            <li>CSS Definitions</li>
+                            <li>CSS Writing Rules</li>
+                            <li>CSS Selectors</li>
+                            <li>Understanding Block, Inline, and Inline Block Structures</li>
+                            <li>Box Properties: Margin, Padding, Border, Width</li>
+                            <li>Visibility</li>
+                            <li>Hover</li>
+                            <li>CSS Reset and Normalize</li>
+                            <li>Usage of Background Image</li>
+                            <li>Color Definitions</li>
+                            <li>Text Properties</li>
+                            <li>Font Size / Font Family</li>
+                            <li>Float</li>
+                            <li>:root Definitions</li>
+                            <li>CSS Positions</li>
+                            <li>Working with Media Queries</li>
+                            <li>FlexBox and flex commands</li>
+                        </ul>
                     </li>
                     <li>SASS & SCSS (Learning)</li>
-                  </ol>
+                </ol>
             </details>
+        </section>
+        <section class="container2">
+            <h2 class="title" id="contact">Contact Me</h2>
+            <div class="contact">
+                <div class="form">
+                    <form action="mailto:kasimpasaoglu@windowslive.com" method="post" enctype="text/plain">
+                        <h3>Send an e-Mail👇</h3>
+                        <label for="name">Name:</label><br>
+                        <input type="text" name="name" id="name"><br>
+                        <label for="email">Email:</label><br>
+                        <input type="email" name="email" id="email"><br>
+                        <label for="message">Message:</label><br>
+                        <textarea name="message" id="message" rows="4" cols="50"></textarea><br>
+                        <input class="input-button" type="submit" value="Submit">
+                    </form>
+                </div>
+            </div>
+            <div class="links">
+                <a aria-label="Chat on WhatsApp" href="https://wa.me/905433010531" target="_blank">
+                    <img src="https://seeklogo.com/images/W/whatsapp-icon-logo-BDC0A8063B-seeklogo.com.png"
+                        alt="WhatsApp" />
+                </a>
+                <a aria-label="github" href="https://github.com/kasimpasaoglu" target="_blank">
+                    <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="github" />
+                </a>
+                <a aria-label="Instagram" href="https://www.instagram.com/kasimpasaoglu/" target="_blank">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/600px-Instagram_icon.png"
+                        alt="Instagram" />
+                </a>
+            </div>
         </section>
     </main>
     <footer>
-
+        <p>Built using basic CSS and HTML knowledge. Please feel free to reach out to me on my profile page for assistance and advice.</p>
     </footer>
 </body>
 
