Converted SCSS, Updated List, Changed Colors

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Kasim Pasaoglu</title>
 </head>
 
@@ -28,15 +28,15 @@
         </nav>
     </div>
     <main>
-        <article class="container">
-            <h2 id="title" class="title">About Me</h2>
+        <article>
+            <h2>About Me</h2>
             <div class="content">
-                <p>Hi there! I'm <a class="link" href="https://github.com/kasimpasaoglu" target="_blank">Kasim
+                <p>Hi there! I'm <a href="https://github.com/kasimpasaoglu" target="_blank">Kasim
                         Pasaoglu</a> hailing from Turkey. Recently, I've delved into the exciting world of front-end
                     development, and I couldn't be more thrilled about it. Since May 1, 2024, I've been immersing myself
-                    in courses on Udemy, with the invaluable guidance of <a class="link"
-                        href="https://github.com/hakanyalcinkaya" target="_blank">Hakan Yalcinkaya</a>. I also receive
-                    tremendous support from my friend <a class="link" href="https://github.com/umitalp">Umit Alp
+                    in courses on Udemy, with the invaluable guidance of <a href="https://github.com/hakanyalcinkaya"
+                        target="_blank">Hakan Yalcinkaya</a>. I also receive
+                    tremendous support from my friend <a href="https://github.com/umitalp">Umit Alp
                         Acarlar</a>, a Senior Software Engineer.<br><br>It's an
                     exhilarating journey, and I'm currently working on my very first project to showcase on GitHub
                     Pages. Stay tuned for updates on my coding endeavors!</p>
@@ -45,8 +45,8 @@
                 </aside>
             </div>
         </article>
-        <section class="container">
-            <h2 id="roadmap" class="title">Learning Roadmap</h2>
+        <article>
+            <h2 id="roadmap">Learning Roadmap</h2>
             <details>
                 <summary>ROADMAP</summary>
                 <img src="./img/roadmap.png" alt="roadmap">
@@ -57,7 +57,7 @@
                     <li>Installation</li>
                     <li>Note-taking methods, markdown, chrome usage, and productivity</li>
                     <li>HTML
-                        <ul class="drop-down">
+                        <ul>
                             <li>Headings, paragraphs</li>
                             <li>Building HTML structure</li>
                             <li>Emmet shortcuts</li>
@@ -67,14 +67,14 @@
                         </ul>
                     </li>
                     <li>Effective usage of VS Code
-                        <ul class="drop-down">
+                        <ul>
                             <li>Settings</li>
                             <li>Shortcuts</li>
                             <li>Code Snippets</li>
                         </ul>
                     </li>
                     <li>GIT, VCS, and GitHub
-                        <ul class="drop-down">
+                        <ul>
                             <li>What is VCS</li>
                             <li>Terminal commands</li>
                             <li>Working with multiple branches</li>
@@ -82,7 +82,7 @@
                         </ul>
                     </li>
                     <li>CSS
-                        <ul class="drop-down">
+                        <ul>
                             <li>What is CSS</li>
                             <li>CSS Definitions</li>
                             <li>CSS Writing Rules</li>
@@ -103,12 +103,24 @@
                             <li>FlexBox and flex commands</li>
                         </ul>
                     </li>
-                    <li>SASS & SCSS (Learning)</li>
+                    <li>SASS & SCSS
+                        <ul>
+                            <li>What is SASS / SCSS? What are the Differences?</li>
+                            <li>Using SCSS online and in a project.</li>
+                            <li>SCSS Setup in VS Code</li>
+                            <li>Using Variables, Import, Nesting</li>
+                            <li>Using Parent Selector, Mixin, Extend</li>
+                            <li>Using Interpolation, Each, For and Map</li>
+                            <li>Using Lists to Store Multiple Variables</li>
+                            <li>Using SCSS Color Functions</li>
+                        </ul>
+                    </li>
+                    <li>BOOTSTRAP (Learning)</li>
                 </ol>
             </details>
-        </section>
-        <section class="container2">
-            <h2 class="title" id="contact">Contact Me</h2>
+        </article>
+        <section>
+            <h2 id="contact">Contact Me</h2>
             <div class="contact">
                 <div class="form">
                     <form action="mailto:kasimpasaoglu@windowslive.com" method="post" enctype="text/plain">
@@ -139,7 +151,8 @@
         </section>
     </main>
     <footer>
-        <p>Built using basic CSS and HTML knowledge. Please feel free to reach out to me on my profile page for assistance and advice.</p>
+        <p>Built using basic CSS and HTML knowledge. Please feel free to reach out to me on my profile page for
+            assistance and advice.</p>
     </footer>
 </body>
 
