--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
     <main>
         <article>
-            <h2>About Me</h2>
+            <h2 id="title">About Me</h2>
             <div class="content">
                 <p>Hi there! I'm <a href="https://github.com/kasimpasaoglu" target="_blank">Kasim
                         Pasaoglu</a> hailing from Turkey. Recently, I've delved into the exciting world of front-end
