removed .form class

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <section>
             <h2 id="contact">Contact Me</h2>
             <div class="contact">
-                <div class="form">
+                <div>
                     <form action="mailto:kasimpasaoglu@windowslive.com" method="post" enctype="text/plain">
                         <h3>Send an e-Mail👇</h3>
                         <label for="name">Name:</label><br>
