--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#title">About Me</a>
+                        <a class="nav-link" href="#title">About Me</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#roadmap">Learning Roadmap</a>
